# CnnSim

./: .gitignore  CMakeLists.txt  MetalNet_Dissertation.tex  MetalNet_Report.tex  README.md  benchmark  benchmark_suite.cpp  generate_pdfs.py  imgui.ini  main.cpp  metalnet_trace.json  report_rulebook.md  sample.md  test.cpp  tests.cpp
Layers/: BatchNorm2D.cpp  BatchNorm2D.h  Conv2D.cpp  Conv2D.h  Dense.cpp  Dense.h  Dropout.cpp  Dropout.h  Flatten.cpp  Flatten.h  Layer.h  LeakyReLU.cpp  LeakyReLU.h  MaxPool2D.cpp  MaxPool2D.h  ReLU.cpp  Softmax.cpp  Softmax.h
benchmarks/: desktop.ini
core/: Tensor.cpp  Tensor.h
data/: DataLoader.cpp  DataLoader.h  Dataset.cpp  Dataset.h
include/MetalNet/: MetalNet.h
include/MetalNet/Layers/: BatchNorm2D.h  Concat.h  Conv2D.h  Dense.h  Dropout.h  ElementwiseAdd.h  Flatten.h  FusedConvBNReLU.h  Layer.h  LeakyReLU.h  MaxPool2D.h  ReLU.h  Sigmoid.h  Softmax.h
include/MetalNet/arch/: Simd.h
include/MetalNet/arch/arm64/: Simd.h
include/MetalNet/arch/x86_64/: Simd.h
include/MetalNet/core/: Im2Col.h  Tensor.h
include/MetalNet/data/: DataLoader.h  Dataset.h
include/MetalNet/nn/: Adam.h  Loss.h  Model.h
include/MetalNet/profiler/: Profiler.h
nn/: Adam.cpp  Adam.h  Loss.cpp  Loss.h  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h
profiler/: CMakeLists.txt  profiler_demo.cpp  profiler_gui.cpp  selftest.cpp
scripts/: run.sh  run_benchmark.sh  run_gui.sh
